--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Web Studio</title>
 </head>
 <body>
+
     <header class="navigation">
         <nav>
             <a href="./index.html"><span>Web</span>Studio</a>
@@ -60,18 +61,48 @@
             <h2>What are we doing</h2>
             <ul class="work_images">
                 <li>
-                    <img src="./images/img_1.jpg" alt="">
+                    <img src="./images/img_1.jpg" alt="computer" width="360">
                 </li>
                 <li>
-                    <img src="./images/img_2.jpg" alt="">
+                    <img src="./images/img_2.jpg" alt="double_screen" width="360">
                 </li>
                 <li>
-                    <img src="./images/img_3.jpg" alt="">
+                    <img src="./images/img_3.jpg" alt="phone_with_laptop" width="360">
+                </li>
+            </ul>
+        </section>
+
+        <section class="team">
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./images/team_1.jpg" alt="Mark Guerrero" width="264">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/team_2.jpg" alt="Tom Ford" width="264">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/team_3.jpg" alt="Camila Garcia" width="264">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/team_4.jpg" alt="Daniel Wilson" width="264">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
+    <footer>
+        <a href="./index.html"><span>Web</span>Studio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 
 </body>
 </html>
