--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="navigation">
         <nav>
-            <a href="./index.html"><span>Web</span>Studio</a>
+            <a href="./index.html">WebStudio</a>
 
             <ul class="menu_nav">
                 <li><a href="">Studio</a></li>
@@ -100,7 +100,7 @@
     </main>
 
     <footer>
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
